--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     ]
   },
   "devDependencies": {
+    "@types/node": "*",
     "@typescript-eslint/eslint-plugin": "^5.1.0",
     "@typescript-eslint/parser": "^5.1.0",
     "eslint": "^8.14.0",
@@ -46,6 +47,7 @@
     "lint-staged": "^13.2.1",
     "prettier": "^2.6.2",
     "simple-git-hooks": "^2.8.1",
+    "ts-node": "^10.9.1",
     "typescript": "^4.4.4"
   }
 }
