--- a/packages/NiuPee/package.json
+++ b/packages/NiuPee/package.json
@@ -2,13 +2,36 @@
   "name": "@jasonzhang/niupee",
   "version": "1.0.0",
   "description": "a friendly http request client ",
-  "main": "index.js",
   "author": "JasonZhang",
   "license": "MIT",
+  "type": "module",
+  "scripts": {
+    "build": "rm -rf target types && tsc",
+    "bundle-script": "rollup --config rollup.config.ts --configPlugin typescript",
+    "bundle-dev": "pnpm run bundle-script --env development",
+    "bundle-production": "pnpm run bundle-script --env production",
+    "bundle-purchase": "pnpm run bundle-script --env hello",
+    "clear": "rm -rf target"
+  },
+  "exports": {
+    ".": {
+      "import": "./target/browser.js"
+    }
+  },
+  "types": "./types/browser.d.ts",
+  "files": [
+    "target",
+    "types"
+  ],
   "devDependencies": {
-    "@types/debug": "^4.1.7"
+    "@rollup/plugin-commonjs": "^24.1.0",
+    "@rollup/plugin-node-resolve": "^15.0.2",
+    "@rollup/plugin-typescript": "^11.1.0",
+    "@types/debug": "^4.1.7",
+    "@types/node": "^18.16.3"
   },
   "dependencies": {
-    "debug": "^4.3.4"
+    "debug": "^4.3.4",
+    "rollup": "^3.21.4"
   }
 }
