add fetch test case which request mp3 resource and play it in browser; add some intro for mono-repo; fix the bugs when consumes the data wrapped by Response in Fetch API; tweak exports field in package.json;

--- a/packages/NiuPee/package.json
+++ b/packages/NiuPee/package.json
@@ -15,10 +15,17 @@
   },
   "exports": {
     ".": {
-      "import": "./target/browser.js"
+      "node": {
+        "require": "./target/node_cmj.js",
+        "import": "./target/node_module.js",
+        "types": "./types/node.d.ts"
+      },
+      "default": {
+        "import": "./target/browser.js",
+        "types": "./types/browser.d.ts"
+      }
     }
   },
-  "types": "./types/browser.d.ts",
   "files": [
     "target",
     "types"
