--- a/packages/line-noise/example/package.json
+++ b/packages/line-noise/example/package.json
@@ -1,6 +1,6 @@
 {
   "dependencies": {
     "esbuild": "^0.18.15",
-    "@jasonzhang/line-noise": "file:../"
+    "@jasonzhang15/line-noise": "file:../"
   }
 }
