--- a/packages/line-noise/package.json
+++ b/packages/line-noise/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@jasonzhang/line-noise",
+  "name": "@jasonzhang15/line-noise",
   "version": "0.1.0",
   "description": "js addon based on c library linenoise used in redis",
   "author": "JasonZhang",
