change the url of demo image or video in README

--- a/packages/line-noise/package.json
+++ b/packages/line-noise/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jasonzhang15/line-noise",
-  "version": "0.1.1",
+  "version": "0.1.3",
   "description": "js addon based on c library linenoise used in redis",
   "author": "JasonZhang",
   "license": "MIT",
@@ -40,7 +40,6 @@
     "native/linenoise",
     "types/*",
     "example/*.{config.json,cjs,mjs}",
-    "example/package.json",
-    "line-noise-demo.{gif,mp4}"
+    "example/package.json"
   ]
 }
