--- a/packages/walking-code-movie/package.json
+++ b/packages/walking-code-movie/package.json
@@ -15,6 +15,7 @@
   "homepage": "https://github.com/zhangzhuang15/JasonPackages#readme",
   "license": "MIT",
   "main": "lib/index.cjs",
+  "type": "module",
   "directories": {
     "lib": "lib",
     "test": "__tests__"
@@ -29,10 +30,30 @@
     "type": "git",
     "url": "git+https://github.com/zhangzhuang15/JasonPackages.git"
   },
+  "packageManager": "pnpm@7.9.3",
   "scripts": {
+    "build-dev": "cross-env TS_NODE_PROJECT=\"tsconfig-for-webpack.json\" webpack --env esbuild --mode development --config webpack.config.ts",
     "test": "node ./__tests__/walking-code-movie.test.js"
   },
   "bugs": {
     "url": "https://github.com/zhangzhuang15/JasonPackages/issues"
+  },
+  "dependencies": {
+    "prismjs": "^1.29.0",
+    "puppeteer": "^20.9.0"
+  },
+  "devDependencies": {
+    "@types/node": "^20.4.5",
+    "@types/prismjs": "^1.26.0",
+    "@types/webpack": "^5.28.1",
+    "@types/webpack-dev-server": "^4.7.2",
+    "cross-env": "^7.0.3",
+    "esbuild-loader": "^3.1.0",
+    "ts-loader": "^9.4.4",
+    "ts-node": "^10.9.1",
+    "tsconfig-paths": "^4.2.0",
+    "typescript": "^4.4.4",
+    "webpack": "^5.88.2",
+    "webpack-cli": "^5.1.4"
   }
 }
